# libemulation

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md
cmake/: FindLibSndFile.cmake
res/templates/Apple II/: Apple IIe Enhanced.xml  Apple IIe.xml
src/: libdiskimage.cmake  libemulation-hal.cmake  libemulation.cmake  libutil.cmake
src/libdiskimage/: DIApple525DiskStorage.cpp  DIApple525DiskStorage.h  DIDiskStorage.cpp  DIDiskStorage.h  DIWozDiskStorage.cpp  DIWozDiskStorage.h
src/libemulation-hal/: PAAudio.cpp
src/libemulation/Core/: OEComponentFactory.cpp
src/libemulation/Implementation/AE/: AERamFactor.cpp  AERamFactor.h
src/libemulation/Implementation/Apple/: Apple1Terminal.cpp  AppleDiskDrive525.cpp  AppleDiskIIInterfaceCard.cpp  AppleDiskIIInterfaceCard.h  AppleIIEAddressDecoder.cpp  AppleIIEAddressDecoder.h  AppleIIEKeyboard.cpp  AppleIIEKeyboard.h  AppleIIEMMU.cpp  AppleIIEMMU.h  AppleIIEVideo.cpp  AppleIIEVideo.h  AppleIIGamePort.cpp  AppleIIVideo.cpp  AppleIIVideo.h
src/libemulation/Implementation/Don't Ask/: SAMDACCard.cpp  SAMDACCard.h
src/libemulation/Implementation/MOS/: MOS6502.cpp
src/libemulation/Interface/Apple/: AppleIIInterface.h
src/libemulation/Interface/Host/: StorageInterface.h
